--- a/exercicios-limpos/unidade03/arquivo.html
+++ b/exercicios-limpos/unidade03/arquivo.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html> 
 <html lang="pt-BR">
     <head>
-
-
+        <title>Uma página</title>
+        <meta charset="utf-8">        
     </head>
     <body>
-
+        <!-- comentário de uma linha -->
+        <p>f &nbsp;&nbsp;2 </p> <!-- &nbsp; espaço a mais -->
 
     </body>
-
-
 </html>
