--- a/exercicios-limpos/unidade04/arquivo.html
+++ b/exercicios-limpos/unidade04/arquivo.html
@@ -3,8 +3,22 @@
     <head>
         <title>Unidade 02 - Elemento Head</title>
         <meta charset="utf-8">
-        
+        <style>
+            body {
+                background: #F00;
+                font-family: sans-serif;
+                color: aliceblue;
+            }
+        </style>
+        <script>
+            function escreverNome() {
+                nome.innerHTML = "modificações";
+            }
+            
+            window.onload = escreverNome;
+        </script>
     </head>
     <body>
+        <p id="nome"></p>
     </body>
 </html>
