--- a/exercicios-limpos/unidade05/exercicio02/index.html
+++ b/exercicios-limpos/unidade05/exercicio02/index.html
@@ -6,6 +6,10 @@
         
     </head>
     <body>
-        
+        <hgroup>
+            <h1>Título maior</h1>
+            <h2>Título diminuindo</h2>
+        </hgroup>
+        <p>apenas um parágrafo</p>
     </body>
 </html>
